# Recogni

./: CMakeLists.txt  Cheatsheet  README_CMAKE.md  build.sh  clean.sh  process_rtl.py  spyglass_cdc.tcl  spyglass_rdc.tcl  timing_constraints.tcl  tool_setup  tool_setup.README  vcs_flow.tcl
.github/workflows/: .rtl_trigger.yml.swp  rtl_trigger.yml
docs/: BUILD_SYSTEM_GUIDE.md
rtl/: CPUtop.v
scripts/: build_vcs.sh  cleanup.sh  help.sh  vcs_compile.sh  vcs_simulate.sh
tb/: config_example_testbench.txt  example_testbench.cpp  processor_testbench.c  stimulus_example_testbench.txt  stimulus_processor_testbench.txt  test_bench_repos
